ändring för synliga drönare

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -25,7 +25,7 @@
           }
         }
       };
-      xhttp.open("POST", "http://127.0.0.1:5002/planner", true);
+      xhttp.open("POST", "http://localhost:5002/planner", true);
       xhttp.send(JSON.stringify(data));
     }
   </script>
@@ -74,7 +74,7 @@
     var set_delay = 50,
     callout = function () {
     $.ajax({
-      url: 'http://0.0.0.0:5000/get_drones'
+      url: 'http://localhost:5000/get_drones'
     })
     .done(function (server_response) {
       var avalaible_drones = Object.keys(server_response)
@@ -86,7 +86,7 @@
       }
     })
     .always(function (server_response) {
-        setTimeout(callout, set_delay);
+      setTimeout(callout, set_delay);
     });
     };
     callout();    
