--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -19,10 +19,11 @@
         <section class="track-order">
             <div class="container">
                 <h2>Skicka din order</h2>
-                <h3> För att skicka din order skriv in dit ordernummer</h3>
+                <h3>För att skicka din order, skriv in ditt ordernummer:</h3>
                 <label for="order-number">Ange ditt ordernummer:</label>
                 <input type="text" id="order-number" name="order-number" placeholder="Ordernummer...">
-                <button onclick="trackOrder()" class="track-button">Spåra order</button>
+                <!-- Om du vill kan du byta texten på knappen -->
+                <button onclick="trackOrder()" class="track-button">Skicka order</button>
                 <p id="error-message" style="color: red; display: none;">Ordernummer finns inte.</p>
             </div>
         </section>
@@ -42,7 +43,7 @@
                 fetch('/verify_order', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/x-www-form-urlencoded',
+                        'Content-Type': 'application/x-www-form-urlencoded'
                     },
                     body: 'order-number=' + encodeURIComponent(orderNumber),
                 })
@@ -63,7 +64,6 @@
                 alert("Vänligen ange ett ordernummer.");
             }
         }
-            
     </script>
 </body>
 </html>
