--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -18,7 +18,7 @@
     <p><strong>Leveransadress:</strong> <span id="delivery-address">-</span></p>
     <p><strong>Beställda produkter:</strong></p>
     <ul id="ordered-products"></ul>
-    <p><strong>Total vikt:</strong> <span id="total-weight">-</span> mg</span></p>
+    <p><strong>Total vikt:</strong> <span id="total-weight">-></span></p>
 
      <!-- Ny knapp för att gå tillbaka till huvudsidan -->
      <button id="back-to-home" onclick="goBackToHome()">Till Huvudsidan</button>
