--- a/webserver/templates/qrcode.html
+++ b/webserver/templates/qrcode.html
@@ -42,7 +42,7 @@
   <video id="video" width="640" height="480" autoplay></video>
   <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
   <p id="output">Scanning for QR code...</p>
-  <button onclick="window.location.href='/map'">Tillbaka</button>
+  <button onclick="window.location.href='/'">Tillbaka</button>
 
   <script>
     const video = document.getElementById('video');
