--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -116,10 +116,10 @@
         orderStatusElement.style.color = "blue";
         orderStatusElement.innerText = "levereras";
       } else if (status === "levererad") {
-        orderStatusElement.style.color = "blue";
+        orderStatusElement.style.color = "green";
         orderStatusElement.innerText = "levererad";
       } else  {
-        orderStatusElement.style.color = "blue";
+        orderStatusElement.style.color = "red";
         orderStatusElement.innerText = "i kö";
       } 
     }
