--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -31,7 +31,7 @@
     <p><strong>Orderstatus:</strong> <span id="order-status">-</span></p>
     
 
-     <!-- Ny knapp för att gå tillbaka till huvudsidan -->
+     <!-- Knapp för att gå till huvudsidan -->
      <button id="back-to-home" onclick="goBackToHome()">Till Huvudsidan</button>
      <!-- Knapp för att gå till QR-skanner -->
      <button id="qr-scan-button" onclick="goToQRScanner()">Skanna QR-kod</button>
